# rust-backend-example

./: .env  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml
migrations/: 20231118143322_init.down.sql  20231118143322_init.up.sql
src/: main.rs
src/gql/: mod.rs  mutations.rs  queries.rs
src/models/: message.rs  mod.rs  users.rs
