[package]
name = "pocket-change-problem"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.1"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.20"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "chrono", "time"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
argon2 = "0.5.2"
async-graphql = { version = "6.0.11", features = ["chrono"] }
async-graphql-actix-web = "6.0.11"
anyhow = "1.0.75"
